tests/failures/no_typed_input.stderr
error: Auto_vec: Expected one or more Typed arguments, Found None
 --> $DIR/no_typed_input.rs:7:5
  |
7 |     fn foo(&self) -> usize {
  |     ^^^^^^^^^^^^^^^^^^^^^^
